--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<nav class="navbar navbar-dark fixed-top bg-dark shadow">
+<nav class="navbar navbar-light fixed-top bg-dark shadow">
     <ul class="nav navbar-justified mr-auto px-3">
         <li class="nav-item">
-            <a class="nav-link" href="/home">Главная</a>
+            <a class="nav-link" href="/">Главная</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/registration">Регистрация</a>
+        </li>
+        <li>
+            <a class="nav-link" href="/widget">Виджеты</a>
         </li>
         <li>
             <a class="nav-link" href="/setting">Сменить город для отображения погоды</a>
